deployment/kuber/testk3s/keycloak1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8443
    targetPort: 8443    
  selector:
    app: keycloak
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  #namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
#        image: quay.io/keycloak/keycloak:16.0.0
        image: quay.io/keycloak/keycloak:21.0.2
        args: ["start"]
#show-config        
# --verbose
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        volumeMounts:
          - name: keycloak-tls-volume
#            mountPath: /var/run/secrets/kubernetes.io/serviceaccount         
            mountPath: /srv/cert
            readOnly: true

        readinessProbe:
          httpGet:
#            path: /auth/realms/master
            path: /realms/master
            port: 8080
          initialDelaySeconds: 120
      volumes:
      - name: keycloak-tls-volume
        hostPath:
          path: /srv/nginx/certssso
          type: DirectoryOrCreate
