deployment/kuber/testk3s/k3singrestest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"  

spec:
  rules:
  - http:
      paths:
      - path: /   
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
