deployment/kuber/testk3s/k3singrestesttls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxtls

spec:
  tls:
  - hosts:
    - prod.neva.loc
    secretName: prod-local-tls
  rules:
  - http:
      paths:
      - path: /   
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
