deployment/kuber/testk3s/k3singrestesttlsext.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxexttls
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"  

spec:
  tls:
  - hosts:
    - shop.neva.cloudns.nz
    secretName: prod-ext-tls
  rules:
  - http:
      paths:
      - path: /   
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
