deployment/kuber/testk3s/keycloak2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
#  - name: https
#    port: 8443
#    targetPort: 8443
  selector:
    app: keycloak
#  type: LoadBalancer
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
#        image: quay.io/keycloak/keycloak:16.0.0
        image: quay.io/keycloak/keycloak:21.0.2
        args: ["start-dev --import-realm"]
#show-config        
# --log-level DEBUG
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        volumeMounts:
          - name: keycloak-tls-volume
            mountPath: /srv/cert
            readOnly: true
          - name: keycloak-volume
            mountPath: /opt/keycloak/data/import                  

#        readinessProbe:
#          httpGet:
#            path: /realms/master
#            port: 8080
#          initialDelaySeconds: 120
      volumes:
      - name: keycloak-tls-volume
        hostPath:
          path: /srv/nginx/certssso
          type: DirectoryOrCreate           
      - name: keycloak-volume
        hostPath:
          path: /srv/sso
          type: DirectoryOrCreate

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
#    traefik.ingress.kubernetes.io/router.pathmatcher: /identity
#    nginx.ingress.kubernetes.io/app-root: /identity
spec:
  tls:
    - hosts:
      - prod.neva.loc
      secretName: prod-local-tls      
  rules:
  - host: prod.neva.loc
#    rule: "Host('prod.neva.loc') && Path('/identity')"
    http:
      paths:
      - path: /identity
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
